[gd_scene load_steps=53 format=3 uid="uid://qybxtn4xfo3i"]

[ext_resource type="Script" uid="uid://syamthef6stf" path="res://Player/player.gd" id="1_50ms3"]
[ext_resource type="Texture2D" uid="uid://c4yuuuuvax5y0" path="res://Assets/Little Mage/Attack/StaffMighty/AttackMighty1.png" id="1_cakfj"]
[ext_resource type="Texture2D" uid="uid://7f8qdvuba8mf" path="res://Assets/Little Mage/Attack/StaffMighty/AttackMighty2.png" id="2_spjsx"]
[ext_resource type="Texture2D" uid="uid://dt1d8e75bidkq" path="res://Assets/Little Mage/Attack/StaffMighty/AttackMighty3.png" id="3_48gdu"]
[ext_resource type="Texture2D" uid="uid://b813hn1ifec2r" path="res://Assets/Little Mage/Attack/StaffMighty/AttackMighty4.png" id="4_jjptg"]
[ext_resource type="Texture2D" uid="uid://cmqjm4c3lgkxe" path="res://Assets/Little Mage/Attack/StaffMighty/AttackMighty5.png" id="5_uh11l"]
[ext_resource type="Texture2D" uid="uid://dkyt15i7sfkq3" path="res://Assets/Little Mage/Attack/StaffMighty/AttackMighty6.png" id="6_fmue0"]
[ext_resource type="Texture2D" uid="uid://rf38t33s0cnd" path="res://Assets/Little Mage/Dying/Dying1.png" id="7_idb4t"]
[ext_resource type="Texture2D" uid="uid://d0ektsnbio41o" path="res://Assets/Little Mage/Dying/Dying2.png" id="8_6ahcw"]
[ext_resource type="Texture2D" uid="uid://c1vgdsevjq3im" path="res://Assets/Little Mage/Dying/Dying3.png" id="9_hmatw"]
[ext_resource type="Texture2D" uid="uid://e6mwq7lj1e2r" path="res://Assets/Little Mage/Dying/Dying4.png" id="10_ln052"]
[ext_resource type="Texture2D" uid="uid://e0og2knr0gcs" path="res://Assets/Little Mage/Dying/Dying5.png" id="11_4o6v7"]
[ext_resource type="Texture2D" uid="uid://j6cc1vgdhv6q" path="res://Assets/Little Mage/Dying/Dying6.png" id="12_v7ome"]
[ext_resource type="Texture2D" uid="uid://kfbi6er1s406" path="res://Assets/Little Mage/Idle/Idle1.png" id="13_mrtlx"]
[ext_resource type="Texture2D" uid="uid://ce2ksac5xshpu" path="res://Assets/Little Mage/Idle/Idle2.png" id="14_c0msb"]
[ext_resource type="Texture2D" uid="uid://0k4cx1t8koe5" path="res://Assets/Little Mage/Falling/Falling1.png" id="14_d23dk"]
[ext_resource type="Texture2D" uid="uid://dt0fjjws6udqa" path="res://Assets/Little Mage/Role/Role1.png" id="14_maysp"]
[ext_resource type="Texture2D" uid="uid://3l17b1hrdmyl" path="res://Assets/Little Mage/Role/Role2.png" id="15_1l10g"]
[ext_resource type="Texture2D" uid="uid://bc8tq1lwxey2o" path="res://Assets/Little Mage/Idle/Idle3.png" id="15_jemqk"]
[ext_resource type="Texture2D" uid="uid://b34i27huwq1dr" path="res://Assets/Little Mage/Falling/Falling2.png" id="15_lgv1c"]
[ext_resource type="Texture2D" uid="uid://bui1x77umcggh" path="res://Assets/Little Mage/Role/Role3.png" id="16_6rl0i"]
[ext_resource type="Texture2D" uid="uid://dvld8bbu3mfh" path="res://Assets/Little Mage/Falling/Falling3.png" id="16_kuvqx"]
[ext_resource type="Texture2D" uid="uid://dr2eneo1n8rxe" path="res://Assets/Little Mage/Idle/Idle5.png" id="16_vcot4"]
[ext_resource type="Texture2D" uid="uid://d0p1tqv3wvhd5" path="res://Assets/Little Mage/Role/Role4.png" id="17_7x5p2"]
[ext_resource type="Texture2D" uid="uid://dqyfy8qj4vpji" path="res://Assets/Little Mage/Idle/Idle4.png" id="17_61o6j"]
[ext_resource type="Texture2D" uid="uid://c83mi6x0xvrux" path="res://Assets/Little Mage/Falling/Falling4.png" id="17_hx5dd"]
[ext_resource type="Texture2D" uid="uid://iu5baevuql2u" path="res://Assets/Little Mage/Role/Role5.png" id="18_6eb1q"]
[ext_resource type="Texture2D" uid="uid://bdiufvjvvhd0i" path="res://Assets/Little Mage/Falling/Falling5.png" id="18_6ffnv"]
[ext_resource type="Texture2D" uid="uid://c7wa1gvintp1g" path="res://Assets/Little Mage/Idle/Idle6.png" id="18_12o8t"]
[ext_resource type="Texture2D" uid="uid://co0vwcr2fs00o" path="res://Assets/Little Mage/Rising - Jumping/Rising1.png" id="19_475qi"]
[ext_resource type="Texture2D" uid="uid://bkgvj6f3ljenw" path="res://Assets/Little Mage/Falling/Falling6.png" id="19_an6ab"]
[ext_resource type="Texture2D" uid="uid://crde4id1yuvuf" path="res://Assets/Little Mage/Hit/Hit1.png" id="20_8ynux"]
[ext_resource type="Texture2D" uid="uid://dq70x8nopvkvc" path="res://Assets/Little Mage/Rising - Jumping/Rising2.png" id="20_nqqe2"]
[ext_resource type="Texture2D" uid="uid://dxnwsluwfygkd" path="res://Assets/Little Mage/Hit/Hit2.png" id="21_d30e8"]
[ext_resource type="Texture2D" uid="uid://jtmgfyuusxr2" path="res://Assets/Little Mage/Rising - Jumping/Rising3.png" id="21_jlpjy"]
[ext_resource type="Texture2D" uid="uid://fvgpqg4p00xq" path="res://Assets/Little Mage/Rising - Jumping/Rising4.png" id="22_3nppu"]
[ext_resource type="Texture2D" uid="uid://cukoy1qkmdjyo" path="res://Assets/Little Mage/Hit/Hit3.png" id="22_6pogt"]
[ext_resource type="Texture2D" uid="uid://d04yofu2n7pwa" path="res://Assets/Little Mage/Rising - Jumping/Rising5.png" id="23_cj0fa"]
[ext_resource type="Texture2D" uid="uid://cx8703inxwav4" path="res://Assets/Little Mage/Rising - Jumping/Rising6.png" id="24_4rou0"]
[ext_resource type="Texture2D" uid="uid://b6e3r245jhxy0" path="res://Assets/Little Mage/Run/Run1.png" id="25_chklt"]
[ext_resource type="Texture2D" uid="uid://c5k3pa4qnkqis" path="res://Assets/Little Mage/Run/Run2.png" id="26_lvv2x"]
[ext_resource type="Texture2D" uid="uid://uxqweubn2j18" path="res://Assets/Little Mage/Run/Run3.png" id="27_2hyet"]
[ext_resource type="Texture2D" uid="uid://ccde5v5jqcw2f" path="res://Assets/Little Mage/Run/Run4.png" id="28_xvuvw"]
[ext_resource type="Texture2D" uid="uid://dslg08sxxqnj3" path="res://Assets/Little Mage/Run/Run5.png" id="29_ybw74"]
[ext_resource type="Texture2D" uid="uid://mt62pufyorcn" path="res://Assets/Little Mage/Run/Run6.png" id="30_abl1s"]
[ext_resource type="AudioStream" uid="uid://m6emfrtxg4va" path="res://Assets/firework-cluster-90480.mp3" id="46_6rl0i"]
[ext_resource type="AudioStream" uid="uid://dkc37jrd3n6jc" path="res://Assets/mixkit-falling-hit-on-gravel-756.wav" id="47_7x5p2"]
[ext_resource type="AudioStream" uid="uid://cmdl0ab8t42ea" path="res://Assets/mixkit-horror-lose-2028.wav" id="48_6eb1q"]
[ext_resource type="AudioStream" uid="uid://vqeh3h37b3bx" path="res://Assets/whoosh-swift-cut-jam-fx-1-00-00.mp3" id="48_7x5p2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nebuq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_cakfj")
}, {
"duration": 1.0,
"texture": ExtResource("2_spjsx")
}, {
"duration": 1.0,
"texture": ExtResource("3_48gdu")
}, {
"duration": 1.0,
"texture": ExtResource("4_jjptg")
}, {
"duration": 1.0,
"texture": ExtResource("5_uh11l")
}, {
"duration": 1.0,
"texture": ExtResource("6_fmue0")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_idb4t")
}, {
"duration": 1.0,
"texture": ExtResource("8_6ahcw")
}, {
"duration": 1.0,
"texture": ExtResource("9_hmatw")
}, {
"duration": 1.0,
"texture": ExtResource("10_ln052")
}, {
"duration": 1.0,
"texture": ExtResource("11_4o6v7")
}, {
"duration": 1.0,
"texture": ExtResource("12_v7ome")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_maysp")
}, {
"duration": 1.0,
"texture": ExtResource("15_1l10g")
}, {
"duration": 1.0,
"texture": ExtResource("16_6rl0i")
}, {
"duration": 1.0,
"texture": ExtResource("17_7x5p2")
}, {
"duration": 1.0,
"texture": ExtResource("18_6eb1q")
}],
"loop": false,
"name": &"dodge",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_d23dk")
}, {
"duration": 1.0,
"texture": ExtResource("15_lgv1c")
}, {
"duration": 1.0,
"texture": ExtResource("16_kuvqx")
}, {
"duration": 1.0,
"texture": ExtResource("17_hx5dd")
}, {
"duration": 1.0,
"texture": ExtResource("18_6ffnv")
}, {
"duration": 1.0,
"texture": ExtResource("19_an6ab")
}],
"loop": true,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_8ynux")
}, {
"duration": 1.0,
"texture": ExtResource("21_d30e8")
}, {
"duration": 1.0,
"texture": ExtResource("22_6pogt")
}],
"loop": false,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_mrtlx")
}, {
"duration": 1.0,
"texture": ExtResource("14_c0msb")
}, {
"duration": 1.0,
"texture": ExtResource("15_jemqk")
}, {
"duration": 1.0,
"texture": ExtResource("16_vcot4")
}, {
"duration": 1.0,
"texture": ExtResource("17_61o6j")
}, {
"duration": 1.0,
"texture": ExtResource("18_12o8t")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_475qi")
}, {
"duration": 1.0,
"texture": ExtResource("20_nqqe2")
}, {
"duration": 1.0,
"texture": ExtResource("21_jlpjy")
}, {
"duration": 1.0,
"texture": ExtResource("22_3nppu")
}, {
"duration": 1.0,
"texture": ExtResource("23_cj0fa")
}, {
"duration": 1.0,
"texture": ExtResource("24_4rou0")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_chklt")
}, {
"duration": 1.0,
"texture": ExtResource("26_lvv2x")
}, {
"duration": 1.0,
"texture": ExtResource("27_2hyet")
}, {
"duration": 1.0,
"texture": ExtResource("28_xvuvw")
}, {
"duration": 1.0,
"texture": ExtResource("29_ybw74")
}, {
"duration": 1.0,
"texture": ExtResource("30_abl1s")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nti2j"]
size = Vector2(44, 76.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qs4pp"]
bg_color = Color(0.309018, 0.707423, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
shadow_size = 2

[node name="Player" type="CharacterBody2D"]
position = Vector2(184, 153)
collision_mask = 3
script = ExtResource("1_50ms3")
speed = 250

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4.3125, 4.51562)
sprite_frames = SubResource("SpriteFrames_nebuq")
animation = &"dodge"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_nti2j")

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="PlayerUI"]
offset_left = 11.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 35.0
theme_override_styles/fill = SubResource("StyleBoxFlat_qs4pp")
value = 100.0
show_percentage = false

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(76, -7)

[node name="DodgeTimer" type="Timer" parent="."]

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("46_6rl0i")

[node name="HitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("47_7x5p2")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("48_6eb1q")
volume_db = 2.476

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("48_7x5p2")
volume_db = 3.699
max_distance = 4096.0

[connection signal="timeout" from="DodgeTimer" to="." method="_on_dodge_timer_timeout"]
